--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "web",
   "version": "1.0.0",
-  "main": "index.js",
+  "author": "Zachary Milonas",
+  "main": "index.html",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "bootstrap": "^4.1.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^3.10.0",
