--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "author": "Zachary Milonas",
   "main": "index.html",
-  "license": "MIT",
+  "license": "BSD",
+  "scripts": {
+    "gulp": "./node_modules/.bin/gulp",
+    "deploy": "./node_modules/.bin/gulp deploy",
+    "watch": "./node_modules/.bin/gulp watch",
+    "start": "./node_modules/.bin/gulp && ./node_modules/.bin/http-server"
+  },
   "dependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
@@ -16,6 +22,7 @@
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.1",
+    "http-server": "^0.11.1",
     "jquery": "^3.3.1"
   }
 }
