--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "start": "./node_modules/.bin/gulp && ./node_modules/.bin/http-server"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "swiper": "^4.2.2"
+  },
+  "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "bootstrap": "^4.1.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-clean-css": "^3.10.0",
@@ -22,7 +26,6 @@
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.1",
-    "http-server": "^0.11.1",
-    "jquery": "^3.3.1"
+    "http-server": "^0.11.1"
   }
 }
