--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^4.2.2"
   },
   "devDependencies": {
